--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,77 @@
+/*Header*/
 .Header{
     display: flex;
     padding: 0;
     color: #ffffff;
-    width: 100%;
+    width: 60%;
     overflow: hidden;
-    
+}
+.headerContainer{
+    display: flex;
+    width: 100%;
+}
+/*ImageHover*/
+.imageHover{
+    display: flex;
+    border: 2px solid #f3ecec;
+    width: 60%;
+    padding: 0;
+    margin: 0;
+    height: 70px;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0 10px 0;
+    font-size: 20px;
+    background-color: #f3ecec;
+}
+.imageHover:hover{
+    background-color: #d86d6d;
+}
+.imageHover:first-child{
+    margin-top: 10%;
+}
+.imageHoverContainer{
+    display: flex;
+    flex-grow: 1;
+    height: calc(1.42*40vh);
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+/*Image
+ */
+ .imageContainer{
+    display: flex;
+    flex-direction: column;
+    min-width: 40vh;
+    height: 100%;
+    align-items: center;
+    justify-items: start;
+}
+.image{
+    width: 100%;
+    height: auto;
+    z-index: 40;
+    border-radius: 0 0 5% 5%;
+}
+.imageTitle{
+    font-size: 1.5em;
+    font-weight: bold;
+}
+.selected{
+    border: 10px solid #e78c81;
+    border-radius: 0 0 5% 5%;
+    z-index: 50;
+    animation: imageAnimation 0.2s ease-in forwards;
+}
+@keyframes imageAnimation{
+    0%{
+        width: 100%;
+    }
+    50%{
+        width: 105%;
+    }
+    100%{
+        width: 110%;
+    }
 }
