--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
   background-color: rgb(255, 255, 255);
+  box-sizing: border-box;
 }
 
 code {
